force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__YearlyIncomeCurrencyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__YearlyIncomeCurrencyId__c</fullName>
    <label>Yearly Income Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>YearlyIncomeCurrencyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>