force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__YearlyIncomeRange__c.field-meta.xml
<CustomField>
    <fullName>ssot__YearlyIncomeRange__c</fullName>
    <label>[DoNotUse]Yearly Income Range</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>YearlyIncomeRange</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>